--- a/doc/old/GSOC2014.md
+++ b/doc/old/GSOC2014.md
@@ -40,7 +40,7 @@ e.g. /var/lib/dpkg/status would contain
 Additionally the md5 sum of the newly installed configuration file (maintainer version) is calculated. This allows dpkg to determine
 if the configuration file was modified by the user. In this case dpkg would allow only to choose one of these two versions.
 
-With these two files only a two-way merge would be possible. However, in most cases a three-way merge would be preferrable. In order
+With these two files only a two-way merge would be possible. However, in most cases a three-way merge would be preferable. In order
 to achieve a three-way merge, we additionally need to keep the base config file (the whole config file and not only its md5 sum):
 
 e.g. store base config file /etc/anacrontab below 
