rest-frontend: add github button to home page + add icons to buttons

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -285,6 +285,7 @@
     "APP.GLOBAL.TITLE": "ElektraInitiative",
     
     "APP.HOME.BUTTON.GETSTARTED": "Get started",
+    "APP.HOME.BUTTON.GITHUB": "GitHub",
     "APP.HOME.BUTTON.TUTORIALS": "Tutorials",
     "APP.HOME.HEADLINE.HOWITWORKS": "Want to see how it works?",
     "APP.HOME.HEADLINE.SLOGAN.FIRST": "Configure everything,",
