rest-frontend: add button for 'my snippets' to user menu as requested in #1151

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -340,6 +340,7 @@
     "APP.NAV.BUTTON.MAIN.NEWS": "News",
     "APP.NAV.BUTTON.MAIN.TUTORIALS": "Tutorials",
     "APP.NAV.BUTTON.MAIN.USERS": "Users",
+    "APP.NAV.BUTTON.MYSNIPPETS": "My snippets",
     "APP.NAV.BUTTON.NEWNETRY": "New snippet",
     "APP.NAV.BUTTON.SHARESNIPPET": "Share Snippet",
     
