rest-frontend: add 'agree to license' info field + suggest usage of ini, ni, yajl

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -113,7 +113,7 @@
     "APP.CONVERSION.PANEL.HEADING": "Configuration snippet converter",
     
     "APP.ENTRIES.CREATE.BUTTON.HOWDOESITWORK": "How does it work?",
-    "APP.ENTRIES.CREATE.LABEL.HOWDOESITWORK": "This form allows you to share a new configuration snippet. On the top you have to enter some information about the snippet, while on the bottom you get a chance to enter the actual snippet. In the list of formats you find plugins of which you can select one that fits (or sounds like it fits) your needs. If you cannot find one, then use the <i>line</i> plugin, it will basically store your snippet line by line as plain text.<br>Please be aware that you cannot change the fields on the top right (organization, application, scope and slug) later on.",
+    "APP.ENTRIES.CREATE.LABEL.HOWDOESITWORK": "This form allows you to share a new configuration snippet. On the top you have to enter some information about the snippet, while on the bottom you get a chance to enter the actual snippet. In the list of formats you find plugins of which you can select one that fits (or sounds like it fits) your needs. We suggest you to use the <i>ini</i>, <i>ni</i> or <i>yajl</i> plugin if possible. If you cannot find a suitable plugin, then use the <i>line</i> plugin instead, it will basically store your snippet line by line as plain text.<br><br>Please be aware that you cannot change the fields on the top right (organization, application, scope and slug) later on.",
     "APP.ENTRIES.CREATE.NOTIFICATION.HEADER": "Create new snippet",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_CREATED_SUCCESSFULLY": "The configuration snippet has been stored successfully. Please check if the import has not caused any issues. In case something is wrong, simply edit the snippet!",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_DOES_ALREADY_EXIST": "An entry with the entered details (organization, application, scope and slug) does already exist. Please choose different values.",
@@ -202,6 +202,7 @@
     "APP.ENTRIES.FORM.LABEL.CONFIGURATION.FORMAT": "Format:",
     "APP.ENTRIES.FORM.LABEL.CONFIGURATION.FORMAT.CONF": "Additional plugin parameters:",
     "APP.ENTRIES.FORM.LABEL.CONFIGURATION.VALUE": "Configuration:",
+    "APP.ENTRIES.FORM.LABEL.CONFIRMLICENSE": "By submitting the snippet you confirm that you have the rights to share the snippet and that you agree to making it available under our <a href=\"/devgettingstarted/license\">BSD license</a>.",
     "APP.ENTRIES.FORM.LABEL.DESCRIPTION": "Description:",
     "APP.ENTRIES.FORM.LABEL.ORGANIZATION": "Organization:",
     "APP.ENTRIES.FORM.LABEL.SCOPE": "Scope:",
