rest-frontend: textual additions

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -264,7 +264,7 @@
     "APP.ENTRIES.SEARCH.ADVANCED.SORTBY.SLUG": "Slug",
     "APP.ENTRIES.SEARCH.SEARCHBOX.BUTTON.ADVANCEDOPTIONS": "Advanced options",
     "APP.ENTRIES.SEARCH.SEARCHBOX.BUTTON.SUBMIT": "Go!",
-    "APP.ENTRIES.SEARCH.SEARCHBOX.PLACEHOLDER": "Search for configuration snippet...",
+    "APP.ENTRIES.SEARCH.SEARCHBOX.PLACEHOLDER": "Search for configuration snippet... (or keep empty to list all)",
     "APP.ENTRIES.SEARCH.TABLE.ACTION.BUTTON.DETAILS": "Details",
     "APP.ENTRIES.SEARCH.TABLE.HEADER.ACTIONS": "Actions",
     "APP.ENTRIES.SEARCH.TABLE.HEADER.APPLICATION": "Application",
