rest-frontend: remove slug from entry search results (implicitely given by title) + add button that leads to raw details (API view)

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -157,6 +157,7 @@
     "APP.ENTRIES.DETAILS.BUTTON.DELETE": "Delete snippet",
     "APP.ENTRIES.DETAILS.BUTTON.DOWNLOAD": "Download",
     "APP.ENTRIES.DETAILS.BUTTON.EDIT": "Edit snippet",
+    "APP.ENTRIES.DETAILS.BUTTON.RAW": "View raw details",
     "APP.ENTRIES.DETAILS.FORMAT.HEADING": "{{ format }} (plugin: {{ plugin }})",
     "APP.ENTRIES.DETAILS.HEADING.CONFIGURATION": "Configuration",
     "APP.ENTRIES.DETAILS.LABEL.LICENSE": "This snippet is licensed under the <a href=\"/devgettingstarted/license\">BSD license</a>.",
@@ -267,6 +268,7 @@
     "APP.ENTRIES.SEARCH.SEARCHBOX.BUTTON.SUBMIT": "Go!",
     "APP.ENTRIES.SEARCH.SEARCHBOX.PLACEHOLDER": "Search for configuration snippet... (or keep empty to list all)",
     "APP.ENTRIES.SEARCH.TABLE.ACTION.BUTTON.DETAILS": "Details",
+    "APP.ENTRIES.SEARCH.TABLE.ACTION.BUTTON.RAWDETAILS": "Raw",
     "APP.ENTRIES.SEARCH.TABLE.HEADER.ACTIONS": "Actions",
     "APP.ENTRIES.SEARCH.TABLE.HEADER.APPLICATION": "Application",
     "APP.ENTRIES.SEARCH.TABLE.HEADER.AUTHOR": "Author",
