rest-frontend: add 'delete user account' function

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -351,6 +351,7 @@
     "APP.USERS.DETAILS.BUTTON.CHANGE_EMAIL": "Change email",
     "APP.USERS.DETAILS.BUTTON.CHANGE_PASSWORD": "Change password",
     "APP.USERS.DETAILS.BUTTON.CHANGE_RANK": "Change rank",
+    "APP.USERS.DETAILS.BUTTON.DELETE": "Delete account",
     "APP.USERS.DETAILS.LABEL.CREATEDAT": "Created at:",
     "APP.USERS.DETAILS.LABEL.EMAIL": "Email:",
     "APP.USERS.DETAILS.LABEL.EMAILNEW": "New email:",
@@ -373,6 +374,7 @@
     "APP.USERS.DETAILS.LABEL.VALIDATION.RANKNEW.REQUIRED": "You have to select a new rank if you want to change it.",
     "APP.USERS.DETAILS.NOTIFICATION.HEADER": "Change account information",
     "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.NEED_AUTHENTICATION": "You have to be authenticated to perform this action.",
+    "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_DELETED_SUCCESSFULLY": "The user account has been deleted successfully.",
     "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_INSUFFICIENT_PERMISSIONS": "You have insufficient permissions to performt his action.",
     "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_NOT_FOUND": "The user account you are trying to change does not exist. It is possible that it has been deleted in the meantime.",
     "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATE_INVALID_EMAIL": "The submitted email does not match the requirements.",
@@ -385,6 +387,9 @@
     "APP.USERS.DETAILS.PANEL.CHANGE_EMAIL.HEADING": "Change email",
     "APP.USERS.DETAILS.PANEL.CHANGE_PASSWORD.HEADING": "Change password",
     "APP.USERS.DETAILS.PANEL.CHANGE_RANK.HEADING": "Change rank",
+    "APP.USERS.DETAILS.PANEL.DELETE.ALERT": "By deleting the account all user information (name, email and password) will be removed entirely. Snippets created with this account will remain untouched. Be aware that this action can not be undone!",
+    "APP.USERS.DETAILS.PANEL.DELETE.CONFIRM": "I confirm that this account should be deleted.",
+    "APP.USERS.DETAILS.PANEL.DELETE.HEADING": "Delete user account",
     "APP.USERS.DETAILS.PANEL.INFO.HEADING": "Account information",
     "APP.USERS.DETAILS.PLACEHOLDER.EMAILNEW": "Enter new email address",
     "APP.USERS.DETAILS.PLACEHOLDER.PASSWORDNEW": "Enter new password",
