doc: add paper itself in bib

--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -1,9 +1,9 @@
 @online{elektra,
-  author = {Markus Raab},
-  title = {Elektra},
-  year = 2016,
-  url = {http://www.libelektra.org},
-  urldate = {2016-07-23}
+	author = {Markus Raab},
+	title = {Elektra},
+	year = 2016,
+	url = {http://www.libelektra.org},
+	urldate = {2016-07-23}
 }
 
 @article{raab2010thesis,
@@ -99,4 +99,17 @@
 	publisher = {ACM},
 	address = {New York, NY, USA},
 	keywords = {benchmark, configuration specification},
-} 
+}
+
+@article{raab2016elektra,
+	doi = {10.21105/joss.00044},
+	url = {http://dx.doi.org/10.21105/joss.00044},
+	year  = {2016},
+	month = {dec},
+	publisher = {The Open Journal},
+	volume = {1},
+	number = {8},
+	author = {Markus Raab},
+	title = {Elektra: universal framework to access configuration parameters},
+	journal = {The Journal of Open Source Software}
+}
