documentation-improvements: use key name and key value consistently

--- a/doc/news/2016-02-16_0.8.15.md
+++ b/doc/news/2016-02-16_0.8.15.md
@@ -426,7 +426,7 @@ When running as root, `kdb` will now use the `system` namespace when
 writing configuration to cascading key names.
 
 Long paths are cumbersome to enter in the CLI.  Thus one can define
-bookmarks now. Bookmarks are key-names that start with `+`.  They are
+bookmarks now. Bookmarks are key names that start with `+`.  They are
 only recognized by the `kdb` tool or tools that explicitly have support
 for it. Applications should not depend on the presence of a bookmark. For
 example, if you set the bookmark kdb:
@@ -444,7 +444,7 @@ no man page viewer is present or Elektra was installed wrongly.
 
 The `--help` usage is unified and improved.
 
-The new keyname naming conventions are now used for
+The new key naming conventions are now used for
 configuration of the `kdb`-tool itself: `/sw/elektra/kdb/#0/%/`
 and `/sw/elektra/kdb/#0/current/` are additionally read.  The option
 `-p`/`--profile` is now supported for every command, it allows to fetch
@@ -490,10 +490,10 @@ did a lot of editing and fixed many places throughout the documentation
 Also thanks to Michael Zehender who added two paragraphs in the main
 README.md.
 
-Keynames of applications should be called `/sw/org/app/#0/current`,
+Key names of applications should be called `/sw/org/app/#0/current`,
 where `current` is the default profile (non given). `org` and
 `app` is supposed to not contain `/` and be completely lowercase.
-Keynames are documented [here](/doc/help/elektra-key-names.md).
+Key names are documented [here](/doc/help/elektra-key-names.md).
 [See also here](/doc/tutorials/application-integration.md). The main
 reason for long paths is the provided flexibility in the future
 (e.g. to use profiles and have a compatible path for new major versions
