doc: fix sudoedit -> visudo

--- a/doc/news/2016-04-29_0.8.16.md
+++ b/doc/news/2016-04-29_0.8.16.md
@@ -152,7 +152,7 @@ Reason: localhost value: ::1 message: Address family not supported
 
 You can also comfortably and safely edit the hosts file
 with: `kdb editor system/hosts hosts`, then you have the
-functionality `sudoedit` for the hosts file.
+functionality `visudo` for the hosts file.
 
 ### rename ###
 
