website: two more small fixes at homepage

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -309,7 +309,7 @@
     "APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Batteries Included",
     "APP.HOME.LABEL.KEYFACT.5.DETAILS": "<a href=\"/tutorials/validate-configuration\">Validate configuration</a> immediately on changes, eliminate your configuration duplicates with the help of symbolic links or compute configuration parameters from other configuration values.",
     "APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration Specification",
-    "APP.HOME.LABEL.KEYFACT.6.DETAILS": "An important step in utilizing all of Elektras features is the elektrification of your application. We have written a <a href=\"/tutorials/integration-of-your-application\">tutorial</a> for you that explains how to do that!",
+    "APP.HOME.LABEL.KEYFACT.6.DETAILS": "Make maintenance of your application easier and utilize all of Elektra's features by elektrification of your application. We have written a <a href=\"/tutorials/integration-of-your-application\">tutorial</a> for you, which explains how to do that!",
     "APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Elektrify your Application",
     "APP.HOME.LABEL.KEYFACT.7.DETAILS": "The Elektra core is written without external dependencies and with high regard to good performance.",
     "APP.HOME.LABEL.KEYFACT.7.HEADLINE": "Fast Without Dependencies",
@@ -317,7 +317,7 @@
     "APP.HOME.LABEL.KEYFACT.8.HEADLINE": "100% Free Software",
     "APP.HOME.LABEL.KEYFACT.9.DETAILS": "Elektra strives to eliminate cross-platform related issues and is therefore suitable for all systems.",
     "APP.HOME.LABEL.KEYFACT.9.HEADLINE": "Cross-platform",
-    "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a href=\"/tutorials/plugins-introduction\">plugin tutorial</a>! Make sure to report an <a href=\"https://github.com/ElektraInitiative/libelektra/issues/new\">issue</a> before: we can help or maybe even do it for you.",
+    "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? You want move unmaintained configuration code to us? Check out the <a href=\"/tutorials/plugins-introduction\">plugin tutorial</a>!  Make sure to report an <a href=\"https://github.com/ElektraInitiative/libelektra/issues/new\">issue</a> before: we can help or maybe even do it for you.",
     "APP.HOME.LABEL.ORIENTATION.1.HEADLINE": "Develop Custom Plugins",
     "APP.HOME.LABEL.ORIENTATION.2.DETAILS": "Of course you can use Elektra also outside a C or C++ environment. Have a look at our <a href=\"/bindings/readme\">language bindings</a>! You can even write plugins in <a href=\"/plugins/jni\">Java</a>, <a href=\"/plugins/python\">Python</a>, and <a href=\"/plugins/lua\">Lua</a>.",
     "APP.HOME.LABEL.ORIENTATION.2.HEADLINE": "Use Elektra outside C/C++",
