rest-frontend: add breadcrumb text for authors
website: footer (fixes #1284)

note: by design it is only possible to give sections a breadcrumb, so we have to use something like 'developers' instead of authors. if we did use 'authors' for the section as well, the URL would look like ...site/authors/authors

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -61,6 +61,7 @@
     "APP.BREADCRUMBS.MAIN.DOCUMENTATION.TEMPLATE": "Documentation",
     "APP.BREADCRUMBS.MAIN.DYN.BINDINGS": "Bindings",
     "APP.BREADCRUMBS.MAIN.DYN.DECISIONS": "Decisions",
+    "APP.BREADCRUMBS.MAIN.DYN.DEVELOPERS": "Developers",
     "APP.BREADCRUMBS.MAIN.DYN.DEVGETTINGSTARTED": "Getting started",
     "APP.BREADCRUMBS.MAIN.DYN.DOCGETTINGSTARTED": "Getting started",
     "APP.BREADCRUMBS.MAIN.DYN.EXAMPLES": "Examples",
