Documentation: Fix minor spelling mistakes

--- a/doc/news/2014-06-21_0.8.6.md
+++ b/doc/news/2014-06-21_0.8.6.md
@@ -108,7 +108,7 @@ the kdb tool will work.
 
 One drawback of Elektra is the small number of available storage
 plugins. While writing storage plugins isn't too hard, it still requires
-knowledge of Elektras plugin architecture. In addition it is always
+knowledge of Elektra’s plugin architecture. In addition it is always
 necessary to keep both translation directions in mind (from file to
 Elektra and back).  In order to mitigate this issue Felix Berlakovich
 is working on an Elektra storage plugin which uses Augeas [1] to read
@@ -134,9 +134,9 @@ features). With the Augeas storage plugin these features cannot be used
 with only the applications already integrated into Elektra, but with all
 applications for which lenses exist.  This storage plugin targets system
 administrators as well as developers, that wish to take advantage of
-Elektras features, but were unable to do so because of missing plugins. If
+Elektra’s features, but were unable to do so because of missing plugins. If
 no lens exists already, writing a new one requires neither programming
-skills nor knowledge of Elektras plugin architecture. Furthermore,
+skills nor knowledge of Elektra’s plugin architecture. Furthermore,
 implementing a new configuration file format is just a matter of writing a
 lens instead of writing a full-fledged parser.
 [1] http://augeas.net/
@@ -158,7 +158,7 @@ provide bindings for static languages a compiler on the metadate file
 will be used. This is comparable to using SWIG. Manuel will focus on
 implementing language bindings for Python and Lua though both techniques
 will support various other languages.  As language bindings only allow
-to call into Elektras API Manuel will also embed the interpreters of
+to call into Elektra’s API Manuel will also embed the interpreters of
 both Python and Lua into two generic plugins. Using these plugins in
 combination with the languages bindings it will be fully possible to
 write plugins for Elektra in languages other than C/C++.
